fixed z-index for the admin pages

--- a/less/donut.less
+++ b/less/donut.less
@@ -75,6 +75,7 @@ table {
 
 /* light border below navbar */
 #nav{
+	z-index: 1010;
 	&.affix {
 	    position: fixed;
 	    top: 0;
